client/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
    'Helvetica Neue', sans-serif;
}

.appWrapper {
  position: relative;
}

.appWrapper .expected {
  display: none;
}

.appWrapper.show-expected .expected {
  display: block;
}

.expected {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
}

.expected *:not(.missing) {
  background-color: transparent;
  color: transparent;
}

